Added code to add employee button

--- a/pages/employee_form.html
+++ b/pages/employee_form.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="D:\Capgemini Trainings\Day 39\css\employee_form.css">
-    <script src="D:\Capgemini Trainings\Day 39\js\employee_form.js"></script>
-    <script src="D:\Capgemini Trainings\Day 39\js\EmployeePayrollData.js"></script>
+    <link rel="stylesheet" href="..\css\employee_form.css">
+    <script src="..\js\employee_form.js"></script>
+    <script src="..\js\EmployeePayrollData.js"></script>
     <title>Employee payroll form</title>
 </head>
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img src="D:\Capgemini Trainings\Day 39\assests\images\logo.png" alt="">
+            <img src="..\assests\images\logo.png" alt="">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -35,22 +35,22 @@
                     <label>
                         <input type="radio" id="profile1" name="profile"
                             value="../assets/profile-images/Ellipse -3.png" required>
-                        <img class="profile" id='image1' src="D:\Capgemini Trainings\Day 39\assests\profile-images\Ellipse -3.png">  
+                        <img class="profile" id='image1' src="..\assests\profile-images\Ellipse -3.png">  
                     </label>
                     <label>
                         <input type="radio" id="profile2" name="profile"
                             value="../assets/profile-images/Ellipse -1.png" required>
-                        <img class="profile" id='image2' src="D:\Capgemini Trainings\Day 39\assests\profile-images\Ellipse -1.png">  
+                        <img class="profile" id='image2' src="..\assests\profile-images\Ellipse -1.png">  
                     </label>
                     <label>
                         <input type="radio" id="profile3" name="profile"
                             value="../assets/profile-images/Ellipse -8.png" required>
-                        <img class="profile" id='image3' src="D:\Capgemini Trainings\Day 39\assests\profile-images\Ellipse -8.png">  
+                        <img class="profile" id='image3' src="..\assests\profile-images\Ellipse -8.png">  
                     </label>
                     <label>
                         <input type="radio" id="profile4" name="profile"
                             value="../assets/profile-images/Ellipse -7.png" required>
-                        <img class="profile" id='image4' src="D:\Capgemini Trainings\Day 39\assests\profile-images\Ellipse -7.png">  
+                        <img class="profile" id='image4' src="..\assests\profile-images\Ellipse -7.png">  
                     </label>
                 </div>
             </div>
