--- a/pages/employee_home.html
+++ b/pages/employee_home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
-        <link rel="stylesheet" href="D:\Capgemini Trainings\Day 39\css\employee_home.css">
+        <link rel="stylesheet" href="..\css\employee_home.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -13,12 +13,21 @@
     <body>
         <header class="header-content header">
             <div class="logo-content">
-                <img src="D:\Capgemini Trainings\Day 39\assests\images\logo.png" alt="">
+                <img src="..\assests\images\logo.png" alt="">
                 <div>
                     <span class="emp-text">EMPLOYEE</span><br>
                     <span class="emp-text emp-payroll">PAYROLL</span>
                 </div>
             </div>
         </header>
+        <div class="main-content">
+            <div class="header-content">
+                <div class="emp-detail-text">
+                    Employee Details <div class="emp-count">10</div>
+                </div>
+                <a href="../pages/employee_form.html" class="add-button">
+                <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+            </div>
+        </div>
     </body>
 </html>
