--- a/pages/employee_home.html
+++ b/pages/employee_home.html
@@ -8,7 +8,7 @@
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <title>Employee Payroll  App</title>
-        <script defer src="../js/home_page.js"></script>
+        <script defer src="../js/employee_home.js"></script>
     </head>
     <body>
         <header class="header-content header">
@@ -28,31 +28,7 @@
                 <a href="../pages/employee_form.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
             </div>
-        <table id="display" class="table">
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Department</th>
-                <th>Salary</th>
-                <th>Start Date</th>
-                <th>Actions</th>
-            </tr>
-            <tr>
-                <td><img class="profile" alt="" src="../assests/profile-images/Ellipse -2.png"></td>
-                <td>Narayan Mahadevan</td>
-                <td>Male</td>
-                <td><div class='dept-label'>HR</div>
-                    <div class='dept-label'>Finance</div></td>
-                <td>3000000</td>
-                <td>1 Nov 2020</td>
-                <td>
-                    <img id="1" onclick="remove(this)" alt="delete"
-                            src="../assests/icons/delete-black-18dp.svg">
-                    <img id="1" alt="edit" onclick="update(this)"
-                            src="../assests/icons/create-black-18dp.svg">        
-                </td>
-            </tr>
+        <table id="table-display" class="table">
         </table>
     </div>
     </body>
