--- a/pages/employee_home.html
+++ b/pages/employee_home.html
@@ -8,7 +8,6 @@
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <title>Employee Payroll  App</title>
-        <script defer src="../js/employee_home.js"></script>
     </head>
     <body>
         <header class="header-content header">
@@ -28,8 +27,12 @@
                 <a href="../pages/employee_form.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
             </div>
+            <div id="table-main">
         <table id="table-display" class="table">
-        </table>
+        </table></div>
     </div>
+    <script src="../js/employee_home.js"></script>
+    <script src="../js/employee_form.js"></script>
+    <script src="../js/EmployeePayrollData.js"></script>
     </body>
 </html>
