Added code to remove employee from storage

--- a/pages/employee_form.html
+++ b/pages/employee_form.html
@@ -82,7 +82,7 @@
                 <label class="label text" for="salary">Choose your salary: </label>
                 <input class="input" type="range" name="salary" id="salary" min="300000"
                          max="500000" step="100" value="400000">
-                <output class="salary-output text" for="salary">400000</output>
+                <output class="salary-output text" for="salary" id ="salary-output">400000</output>
 
             </div>
             <div class="row-content">
@@ -146,7 +146,7 @@
             </div>
             <div class="row-content">
                 <label class="label text" for="notes">Notes</label>
-                <textarea id="notes" class="input" name="Notes" placeholder="" style="height:100px"></textarea>
+                <textarea id="notes" class="input" name="notes" placeholder="" style="height:100px"></textarea>
             </div>
             <div class="buttonParent">
                 <a href="./employee_form.html" class="resetButton button cancelButton">Cancel</a>
