--- a/pages/employee_home.html
+++ b/pages/employee_home.html
@@ -25,7 +25,7 @@
                     Employee Details <div class="emp-count">10</div>
                 </div>
                 <a href="../pages/employee_form.html" class="add-button">
-                <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+                <img src="../assests/icons/add-24px.svg" alt="">Add User</a>
             </div>
             <div id="table-main">
         <table id="table-display" class="table">
