Added code to update employee details

--- a/pages/employee_home.html
+++ b/pages/employee_home.html
@@ -34,5 +34,7 @@
     <script src="../js/employee_home.js"></script>
     <script src="../js/employee_form.js"></script>
     <script src="../js/EmployeePayrollData.js"></script>
+    <script src="../js/site_properties.js"></script>
+    <script src="../js/utility.js"></script>
     </body>
 </html>
